#2829: fixed double scrollbar issue

--- a/roles/ui/files/FWO.UI/wwwroot/css/site.css
+++ b/roles/ui/files/FWO.UI/wwwroot/css/site.css
@@ -513,14 +513,28 @@ thead {
 
 /* EditAppRoleLeftSide.razor */
 
-#app-role-library-ordered-draggable-list .draggable-item{
+#app-role-library-ordered-draggable-list .draggable-item {
     background-color: #a4d7f5;
 }
 
-#app-role-library-ordered-draggable-list .draggable-item.draggable-selected{
+#app-role-library-ordered-draggable-list .draggable-item.draggable-selected {
     background-color: transparent;
 }
 
-#app-role-library-ordered-draggable-list .border{
+#app-role-library-ordered-draggable-list .border {
     border: none !important;
+}
+
+/* Popups */
+
+.modal-body {
+    overflow: auto;
+}
+
+.modal-body:has(.table-responsive) {
+overflow: hidden;
+}
+
+.modal-body > * {
+max-width: 99%;
 }
